add remote connection

--- a/MlazAPIs/appsettings.json
+++ b/MlazAPIs/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db34247.public.databaseasp.net; Database=db34247; User Id=db34247; Password=4p@Hi#Y8?Q2x; Encrypt=True; TrustServerCertificate=True;"
+  }
 }
