enhencment in code

--- a/MlazAPIs/appsettings.json
+++ b/MlazAPIs/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db34247.public.databaseasp.net; Database=db34247; User Id=db34247; Password=4p@Hi#Y8?Q2x; Encrypt=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=db34559.public.databaseasp.net; Database=db34559; User Id=db34559; Password=W=r6%3EyC@e7; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
