--- a/MlazAPIs/appsettings.json
+++ b/MlazAPIs/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db34559.public.databaseasp.net; Database=db34559; User Id=db34559; Password=W=r6%3EyC@e7; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=db34685.public.databaseasp.net; Database=db34685; User Id=db34685; Password=Lg6%j_Z4Ec3#; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
