update in project

--- a/MlazAPIs/appsettings.json
+++ b/MlazAPIs/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db34685.public.databaseasp.net; Database=db34685; User Id=db34685; Password=Lg6%j_Z4Ec3#; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=db34772.public.databaseasp.net; Database=db34772; User Id=db34772; Password=eK=4Q-8k#sA2; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
